--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,9 @@ project:
   render:
     - "!old/"
 
+resources:
+  - CNAME
+  
 website:
   title: "Data Engineering Pilipinas"
   site-url: http://dataengineering.ph/
