--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,19 +11,24 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2 
         
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v2
+
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
         with:
-          # To install LaTeX to build PDF book 
-          tinytex: true 
-          # uncomment below and fill to pin a version
-          # version: 0.9.600
-      
-      # add software dependencies here
+          tinytex: true  # To install LaTeX to build PDF book
+
+      # Add any R package installation if needed
+      - name: Install dependencies
+        run: |
+          Rscript -e "install.packages('quarto')"
+          # Add other packages as needed, for example:
+          # Rscript -e "install.packages(c('ggplot2', 'dplyr'))"
 
       - name: Publish to GitHub Pages (and render)
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
